# gpu-playground

wgpu/: Cargo.toml  build.rs
wgpu/shader/: Cargo.toml
wgpu/shader/src/: lib.rs
wgpu/src/: main.rs
